--- a/Data Science/Member Tasks/Stage 1/Annem Sony/Readme
+++ b/Data Science/Member Tasks/Stage 1/Annem Sony/Readme
@@ -1,1 +1,4 @@
-
+This is folder for MemberShip Task
+Directory is:
+Folder Name: Sony Anne contains Python file for membership task and also input and output dataset files
+It also have enrichment data description 
