--- a/Data Science/Member Tasks/Stage 1/Annem Sony/Readme
+++ b/Data Science/Member Tasks/Stage 1/Annem Sony/Readme
@@ -1,4 +1,5 @@
-This is folder for MemberShip Task
+This is the folder for the MemberShip Task
 Directory is:
 Folder Name: Annem Sony contains Python file for membership task and also input and output dataset files
-It also have enrichment data description 
+It also has an enrichment data description under the name of employement_des.pdf
+
