--- a/Data Science/Member Tasks/Stage 1/Annem Sony/Readme
+++ b/Data Science/Member Tasks/Stage 1/Annem Sony/Readme
@@ -1,5 +1,5 @@
 This is the folder for the MemberShip Task
 Directory is:
-Folder Name: Annem Sony contains Python file for membership task and also input and output dataset files
+Folder Name: Annem Sony contains ipynb file  for membership task and also has input data name emp.csv file
 It also has an enrichment data description under the name of employement_des.pdf
 
